test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-source/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-one-source-1
  namespace: default
type: Opaque
--- 
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: sync-delete-one-source-2
  namespace: default
type: Opaque
---
apiVersion: v1
data:
  color: Ymx1ZQ==
kind: Secret
metadata:
  name: sync-delete-one-source-3
  namespace: default
type: Opaque
