test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-source/downstream1-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-delete-one-source-1
  namespace: sync-delete-one-source
type: Opaque
