test/conformance/chainsaw/generating-policies/clone/sync/sync-delete-one-source/downstream2-assert.yaml
apiVersion: v1
data:
  key: dmFsdWU=
kind: Secret
metadata:
  name: sync-delete-one-source-2
  namespace: sync-delete-one-source
type: Opaque
